Resolve comments